Views Calendar 5.x
==================

Version 2.0 dev
===============

- Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.
- #283902 Make sure date_format() isn't used on items with no calendar dates.
- #283206 Backport ability to use full name of week days in calendar view.
- #284760 Don't make weekno a link when there is no week view, eliminate some redundant date_format() calls.
- #276421 Use farbtastic color picker to set calendar stripes, and start process of making stripes more customizable.
- #282777 Try to make calendar creation in PHP4 more efficient to speed up creation of year calendar.

Version 2.0-rc2
===============

- #278391 Fix calendar popup position in Firefox.
- #278267 Add a theme for the jcalendar popup.
- #279169 Get rid of calendar_info() function in uninstall.
- #261610 Make sure delta value is available for jcalendar popup display.
- #255984 Make popup calendar date selector a configurable value.
- #251094 Make weekno a configurable value.
- #259127 Remove ajax back/next navigation on mini calendar, it's not working well enough.
- #247215 Make sure default calendar view and block are not triggered if there is no date field and add validation to the view to require a date field.
- #268668 Adjust comparison dates for timezone offsets to make sure multi-day events get split correctly.
- The cached ical feed cannot be used to store date objects, recreate them as needed.
- #234070 Fix broken ical title.
- #258501 Make sure calendar.inc is included when creating ical feed.
- #258515 Fix url in ical export.
- #266623 Protect against foreach() errors on empty ical feeds.
- PHP4 can't do comparisons of date objects, so alter calendar comparison code to compare formatted dates instead.
- #275213 Arguments were reversed in date_week_range().
- Remove as many dependencies as possible from install files and auto-enable necessary modules.