@@ -4,6 +4,7 @@ Views Calendar 5.x
 Version 2.0 dev
 ===============
 
+- Tweaked the jcalendar popup html and css a bit to keep title from popping out of the box in some themes.
 - Bring the 5.2 and 6.2 calendar themes into alignment so both use the same styles and themes, including tableless back/next navigation links and themeable headers.
 - #283902 Make sure date_format() isn't used on items with no calendar dates.
 - #283206 Backport ability to use full name of week days in calendar view.
